# frpc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  update_app.py  update_models.py  update_persistence.py
.github/workflows/: release.yml
crates/chmlfrp-core/: Cargo.toml
crates/chmlfrp-core/src/: api.rs  auth.rs  config.rs  download.rs  lib.rs  models.rs  persistence.rs  process.rs  utils.rs
crates/chmlfrp-tui/: Cargo.toml
crates/chmlfrp-tui/assets/: chmlfrp-tui.service
crates/chmlfrp-tui/src/: app.rs  custom_tunnel.rs  daemon.rs  event.rs  main.rs  storage.rs  systemd.rs
crates/chmlfrp-tui/src/ui/: login.rs  logs.rs  mod.rs  settings.rs  tunnels.rs
src/: App.tsx  frosted-glass.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: autostart.rs  background.rs  custom_tunnel.rs  mod.rs  ports.rs  process.rs  process_persistence.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/components/App/hooks/: useBackground.ts  useStartupAutoStartTunnels.ts  useTitleBar.ts
src/components/pages/Settings/: index.tsx  types.ts  utils.ts
src/components/pages/Settings/components/: AppearanceSection.tsx
src/components/pages/Settings/hooks/: useBackgroundImage.ts
src/components/pages/TunnelList/: index.tsx
src/components/pages/TunnelList/components/: CreateTunnelDialog.tsx  EditTunnelDialog.tsx  TunnelCard.tsx
src/components/pages/TunnelList/components/shared/: TunnelForm.tsx
src/components/pages/TunnelList/hooks/: useTunnelList.ts  useTunnelProgress.ts  useTunnelToggle.ts
src/components/ui/: dialog.tsx  select.tsx
src/services/: autoStartTunnelsService.ts  frpcManager.ts  ports.ts
