[package]
name = "ChmlFrpLauncher"
version = "0.7.3"
description = "ChmlFrp的官方启动器"
authors = ["南充市轻爪网络科技有限公司 <chaoji@chcat.cn>"]
license = "Apache-2.0"
repository = "https://github.com/TechCat-Team/ChmlFrpLauncher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
chrono = "0.4"
strip-ansi-escapes = "0.2"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"

[dependencies.tokio]
version = "1.48"
default-features = false
features = ["rt-multi-thread", "macros", "sync", "time"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
