[package]
name = "chmlfrp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
strip-ansi-escapes = "0.2"
libc = "0.2"
urlencoding = "2"
